-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0 Beta
-
WinRT/WinPhone arm/WinPhone x86
-
-
2c8c6dd9a478f0f2e2b811a9d3e68891ee1bef0b d20a99c081491f020836904eaa1c9323b9b56921 cfd069181c01bbade16c173a96100819aa719613
qt-enterprise-windows-x86-winrt-msvc2013-5.8.0-beta_578.exe
qt-enterprise-windows-x86-winrt-msvc2015-5.8.0-beta_578.exe
Install with default options, compile example following example. Build fails with following error:
touch\fingerpaint
widgets\graphicsview\chip
widgets\itemviews\pixelator
widgets\itemviews\spreadsheet
widgets\painting\fontsampler
widgets\richtext\orderform
widgets\widgets\imageviewer
widgets\widgets\scribble:
\fingerpaint\scribblearea.cpp(53) : fatal error C1083: Cannot open include file: 'QPrinter': No such file or directory
widgets\mainwindows\dockwidgets:
\widgets\mainwindows\dockwidgets\mainwindow.cpp:54: error: C1083: Cannot open include file: 'QtPrintSupport': No such file or directory
widgets\richtext\textedit:
\widgets\richtext\textedit\textedit.cpp:75: error: C1083: Cannot open include file: 'QPrintDialog': No such file or directory
Reproduces with all WinRT and WinPhone targets, both msvc2013 and 2015. All those are working on 5.7.1.
For Gerrit Dashboard: QTBUG-56321 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
177042,4 | winrt: Add printsupport | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |
177048,4 | Fix compilation without QPrinter support | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |
182123,3 | winrt: Fix Qt5PrintSupport(d).lib generation | 5.8.0 | qt/qtbase | Status: MERGED | +2 | 0 |