Fix compilation without QPrinter support

Task-number: QTBUG-56321
Change-Id: Ic77d01431ee58d609eca895d1f2d216042406bc9
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>